# lm_kata_01

./: .gitignore  01_flax_optax_review.ipynb  02_encode_and_fcn.ipynb  03_construct_tooling.ipynb  03a_devel_validation.ipynb  03b_wider_context.ipynb  04_LoRa-ResNet.ipynb  05_try_LSTM.ipynb  06_try_octinion.ipynb  07_devel_goctonion.ipynb  08_devel_spiking_neuron.ipynb  09_how_many_bits_for_triplets.ipynb  0A_devel_lib.ipynb  0B_devel_lib_for_jax.ipynb  lib_kata.py  main.py  octo.py
.ipynb_checkpoints/: 01_flax_optax_review-checkpoint.ipynb  03_construct_tooling-checkpoint.ipynb  lib_kata-checkpoint.py
ndnumbers/: .gitignore  pyproject.toml
ndnumbers/src/ndnumbers/: cplx.py  octo.py  quad.py  sede.py
ndnumbers/tests/: test_cplx.py
wandb/: latest-run
wandb/run-20231230_075914-4cw7go9l/: run-4cw7go9l.wandb
wandb/run-20231230_075929-7iaqfk85/: run-7iaqfk85.wandb
wandb/run-20231230_075943-a9sasfz2/: run-a9sasfz2.wandb
wandb/run-20231230_080055-gedhs1l7/: run-gedhs1l7.wandb
wandb/run-20231230_080123-1lq1dpy7/: run-1lq1dpy7.wandb
wandb/run-20231230_080214-ctficoap/: run-ctficoap.wandb
wandb/run-20231230_080623-jrd64bw6/: run-jrd64bw6.wandb
wandb/run-20231230_080714-vxfmags3/: run-vxfmags3.wandb
wandb/run-20231230_080806-6gtrmckr/: run-6gtrmckr.wandb
wandb/run-20231230_080958-kbsgabj5/: run-kbsgabj5.wandb
wandb/run-20231230_081145-nfby115a/: run-nfby115a.wandb
wandb/run-20231230_081302-7d7daxxa/: run-7d7daxxa.wandb
wandb/run-20231230_081327-fdwy617b/: run-fdwy617b.wandb
wandb/run-20231230_081806-51ffaa12/: run-51ffaa12.wandb
(+79 files in other folders)
