[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndnumbers"
version = "0.0.0"
authors = [
  { name="George Rey", email="nobody@nowhere.net" },
]
description = "Complex numbers, quaternions, octonions, sedenions, and beyond"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jerzydziewierz/ndnumbers"
Issues = "https://github.com/jerzydziewierz/ndnumbers/issues"
